k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vocabulary-app
spec:
  selector:
    app: vocabulary-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
