k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vocabulary-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: vocabulary.nst.art.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vocabulary-app
                port:
                  number: 80
  tls:
    - hosts:
        - vocabulary.nst.art.br
      secretName: vocabulary-tls
